[project]
name = "async-agentic-tools"
version = "0.1.0"
description = "True async agentic tools — callback-driven delivery for AI agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.49",
    "livekit>=1.0.25",
    "numpy>=2.4.2",
    "strands-agents[bidi]>=1.26.0",
    "strands-agents-tools>=0.2.20",
]
